--- a/Frontends/RentACar.WebUI/RentACar.WebUI.csproj
+++ b/Frontends/RentACar.WebUI/RentACar.WebUI.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RentACar.Dto\RentACar.Dto.csproj" />
+  </ItemGroup>
+
 </Project>
